syntax = "proto3";

package SVRPC;

message DoublePoint
{
	double x=1;
	double y=2;
}
message Point
{
	int32 x=1;
	int32 y=2;
}

//At the moment all values are stored as a string.  
//In the future, this will be changed for performance reasons. Probably the message is not complet now
message Variant 
{
	oneof value
	{
		bool bool_value = 1;
		int32 int32_value = 2;
		int64 int64_value = 3;
		uint32 uint32_value = 4;
		uint64 uint64_value = 5;
		string string_value = 6;
		double double_value = 7;
		float float_value = 8;
		DoublePoint dpount_value =9;
		Point        pint_value= 10;
		bytes		GUID_value=11;
	}
	int32 variantType =12;
}
